# pico-climate-lcd

./: CMakeLists.txt  README.md  dht.c  dht.h  lcd_1602_i2c.c  lcd_1602_i2c.h  main.c
